# ShefPort

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  test.py  testya.py
.github/workflows/: deploy.yml
Parser/: detail.py  main_parcer.py  parser.py
data/: config.py  report.xls
database/: db.py  loadfromparser.py  models.py
datadase/: db.py  loadfromparser.py  models.py
handlers/: admin.py  admin_analitics.py  admin_product.py  admin_recovery.py  admin_setadmin.py  carts.py  catalog.py  costumer.py  orders.py  product_helpers.py  products.py  search_helpers.py  user_start.py
keyboards/: admin_kb.py  carts_kb.py  catalog_control.py  categorieskb.py  describe_kb.py  mainkb.py  product_cards.py  productskb.py  startkb.py
middleware/: db.py  user_activity.py
services/: backup_db.py  backup_jobs.py  db_updater.py  filters.py  load_ostatki.py  mail_checker.py  search.py  setup_log.py  setup_scheduler.py  yandex_db.py
utils/: text_utils.py
