[project]
name = "shefport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "bs4>=0.0.2",
    "mypy>=1.18.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "sqlalchemy>=2.0.44",
]
